--- a/kubernetes/charts/minio/values.yaml
+++ b/kubernetes/charts/minio/values.yaml
@@ -2,5 +2,5 @@ host: staging
 port: 9000
 size: 1Ti
 replicas: 1
-access_key: minio
-secret_key: minio123
+s3_access_key: minio
+s3_secret_key: minio123
