workaround for seaweedfs

--- a/kubernetes/templates/configmap.yaml
+++ b/kubernetes/templates/configmap.yaml
@@ -25,4 +25,15 @@ metadata:
   namespace: {{ .Values.namespace }}
 data:
   config.yaml: |-
-{{ toYaml .Values | indent 6 }}
+{{- $config := .Values | deepCopy }}
+{{- if .Values.seaweedfs.enabled }}
+  {{- if hasKey .Values.staging "s3_boto3" }}
+    {{- $_ := set $config.staging.s3_boto3 "host" "seaweedfs-s3" }}
+    {{- $_ := set $config.staging.s3_boto3 "should_set_policy" false }}
+  {{- end }}
+{{- else }}
+  {{- if hasKey .Values.staging "s3_boto3" }}
+    {{- $_ := set $config.staging.s3_boto3 "should_set_policy" true }}
+  {{- end }}
+{{- end }}
+{{ $config | toYaml | indent 6 }}
