--- a/kubernetes/templates/configmap.yaml
+++ b/kubernetes/templates/configmap.yaml
@@ -36,4 +36,16 @@ data:
     {{- $_ := set $config.staging.s3_boto3 "should_set_policy" true }}
   {{- end }}
 {{- end }}
+
+{{- if .Values.seaweedfs.enabled }}
+  {{- if hasKey .Values.staging "s3" }}
+    {{- $_ := set $config.staging.s3 "host" "seaweedfs-s3" }}
+    {{- $_ := set $config.staging.s3 "should_set_policy" false }}
+  {{- end }}
+{{- else }}
+  {{- if hasKey .Values.staging "s3" }}
+    {{- $_ := set $config.staging.s3 "should_set_policy" true }}
+  {{- end }}
+{{- end }}
+
 {{ $config | toYaml | indent 6 }}
