feat[kub]: use .values.global.namespace to enable subcharting polytope

--- a/kubernetes/templates/configmap.yaml
+++ b/kubernetes/templates/configmap.yaml
@@ -22,7 +22,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: polytope-config
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 data:
   config.yaml: |-
 {{- $config := .Values | deepCopy }}
