--- a/kubernetes/templates/configmap_template.yaml
+++ b/kubernetes/templates/configmap_template.yaml
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: polytope-config-generic
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
   annotations:
 
 data:
