--- a/kubernetes/charts/minio/templates/deployment.yaml
+++ b/kubernetes/charts/minio/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: minio
-  namespace: {{ .Values.namespace | default .Release.Namespace }}
+  namespace: {{ .Values.global.namespace | default .Release.Namespace }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
