--- a/kubernetes/charts/minio/templates/pvc.yaml
+++ b/kubernetes/charts/minio/templates/pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: minio-pv-claim
-  namespace: {{ .Values.namespace | default .Release.Namespace }}
+  namespace: {{ .Values.global.namespace | default .Release.Namespace }}
 spec:
   accessModes:
     - ReadWriteOnce
