--- a/kubernetes/charts/minio/templates/service.yaml
+++ b/kubernetes/charts/minio/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.host }}
-  namespace: {{ .Values.namespace | default .Release.Namespace }}
+  namespace: {{ .Values.global.namespace | default .Release.Namespace }}
 spec:
   type: NodePort
   ports:
