--- a/kubernetes/templates/broker.yaml
+++ b/kubernetes/templates/broker.yaml
@@ -25,7 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: broker
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.deployment.broker.replicas }}
   selector:
