--- a/kubernetes/templates/garbage-collector.yml
+++ b/kubernetes/templates/garbage-collector.yml
@@ -25,7 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: garbage-collector
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ index .Values "deployment.garbage-collector.replicas" }}
   selector:
