--- a/kubernetes/templates/mongodb.yaml
+++ b/kubernetes/templates/mongodb.yaml
@@ -5,7 +5,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mongodb
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   serviceName: mongodb
   replicas: {{ .Values.deployment.mongodb.replicas }}
@@ -53,7 +53,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
   labels:
     name: mongodb
 spec:
@@ -69,7 +69,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: pod-lister
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 rules:
 - apiGroups: [""]
   resources: ["pods"]
@@ -81,7 +81,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pod-lister-binding
-  namespace: {{ .Values.Namespace }}
+  namespace: {{ .Values.global.namespace }}
 subjects:
 - kind: ServiceAccount
   name: default
