--- a/kubernetes/templates/pull-secret.yaml
+++ b/kubernetes/templates/pull-secret.yaml
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: polytope-registry-cred
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "imagePullSecret" . }}
