--- a/kubernetes/templates/service_monitors.yaml
+++ b/kubernetes/templates/service_monitors.yaml
@@ -6,7 +6,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: seaweedfs-master-monitor
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     matchLabels:
@@ -14,7 +14,7 @@ spec:
       app.kubernetes.io/name: seaweedfs
   namespaceSelector:
     matchNames:
-      - {{ .Values.namespace }}
+      - {{ .Values.global.namespace }}
   endpoints:
     - port: metrics
       interval: 30s
@@ -29,7 +29,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: seaweedfs-filer-monitor
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     matchLabels:
@@ -37,7 +37,7 @@ spec:
       app.kubernetes.io/name: seaweedfs
   namespaceSelector:
     matchNames:
-      - {{ .Values.namespace }}
+      - {{ .Values.global.namespace }}
   endpoints:
     - port: metrics
       interval: 30s
@@ -48,7 +48,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: seaweedfs-filer-client-monitor
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     matchLabels:
@@ -56,7 +56,7 @@ spec:
       app.kubernetes.io/name: seaweedfs
   namespaceSelector:
     matchNames:
-      - {{ .Values.namespace }}
+      - {{ .Values.global.namespace }}
   endpoints:
     - port: metrics
       interval: 30s
@@ -71,7 +71,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: seaweedfs-volume-monitor
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     matchLabels:
@@ -79,7 +79,7 @@ spec:
       app.kubernetes.io/name: seaweedfs
   namespaceSelector:
     matchNames:
-      - {{ .Values.namespace }}
+      - {{ .Values.global.namespace }}
   endpoints:
     - port: metrics
       interval: 30s
