--- a/kubernetes/templates/telemetry.yaml
+++ b/kubernetes/templates/telemetry.yaml
@@ -25,7 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: telemetry
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.deployment.telemetry.replicas }}
   selector:
@@ -79,7 +79,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.telemetry.host }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     app: telemetry
