--- a/kubernetes/templates/worker.yaml
+++ b/kubernetes/templates/worker.yaml
@@ -27,7 +27,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: worker
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.deployment.worker.replicas }}
   selector:
@@ -132,7 +132,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: worker
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   replicas: {{ .Values.deployment.worker.replicas }}
   selector:
@@ -274,7 +274,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: worker-{{ $i }}
-  namespace: {{ $values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 spec:
   externalTrafficPolicy: Local # Only visible when accessing host node
   selector:
@@ -315,7 +315,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: mars-client
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 rules:
   - apiGroups: [""]
     resources: ["services"]
@@ -326,7 +326,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: mars-client
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Values.global.namespace }}
 subjects:
   - kind: ServiceAccount
     name: default
