feat: better dns config

--- a/kubernetes/templates/configmap.yaml
+++ b/kubernetes/templates/configmap.yaml
@@ -48,4 +48,6 @@ data:
   {{- end }}
 {{- end }}
 
+{{- $_ := set $config.staging.s3_boto3 "url" (printf "download.%s.%s" .Values.deployment.ingress.deployment_name .Values.deployment.ingress.common_domain) }}
+
 {{ $config | toYaml | indent 6 }}
