--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -43,7 +43,7 @@ metadata:
     {{ end }}
 spec:
   rules:
-  - host: {{ .Values.deployment.ingress.public_endpoint_dns_name }}
+  - host: "{{ .Values.deployment.ingress.deployment_name }}.{{ .Values.deployment.ingress.common_domain }}"
     http:
       paths:
       - path: /
@@ -60,7 +60,7 @@ spec:
         number: {{ .Values.deployment.ingress.port }}
   tls:
   - hosts:
-    - {{ .Values.deployment.ingress.public_endpoint_dns_name }}
+    - "{{ .Values.deployment.ingress.deployment_name }}.{{ .Values.deployment.ingress.common_domain }}"
     secretName: {{ .Values.deployment.ingress.frontend_tls_secret }}
 
 ---
@@ -82,7 +82,7 @@ metadata:
   name: polytope-ingress-downloads
 spec:
   rules:
-  - host: {{ .Values.deployment.ingress.downloads.downloads_public_endpoint_dns_name }}
+  - host: "download.{{ .Values.deployment.ingress.deployment_name }}.{{ .Values.deployment.ingress.common_domain }}"
     http:
       paths:
       - backend:
@@ -94,7 +94,7 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - {{ .Values.deployment.ingress.downloads.downloads_public_endpoint_dns_name }}
+    - "download.{{ .Values.deployment.ingress.deployment_name }}.{{ .Values.deployment.ingress.common_domain }}"
     secretName: {{ .Values.deployment.ingress.downloads.downloads_tls_secret }}
 
 {{ end }} # end of ingress enabled check defined in the beginning
