--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -33,7 +33,6 @@ metadata:
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
     nginx.org/proxy-buffering: "False"
     nginx.org/proxy-max-temp-file-size: "1024000m"
-    kubernetes.io/ingress.class: nginx
     {{ if .Values.deployment.ingress.https_rewrite }}
     nginx.org/redirect-to-https: "True"
     ingress.kubernetes.io/ssl-redirect: "True"
@@ -42,6 +41,7 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "False"
     {{ end }}
 spec:
+  ingressClassName: nginx
   rules:
   - host: "{{ .Values.deployment.ingress.deployment_name }}.{{ .Values.deployment.ingress.common_domain }}"
     http:
@@ -72,7 +72,6 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: ov-issuer
     dns.operators.ecmwf.int/on-transport-server: vs-transport-https
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
     nginx.ingress.kubernetes.io/limit-rps: "50"
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
@@ -81,6 +80,7 @@ metadata:
     nginx.org/redirect-to-https: "True"
   name: polytope-ingress-downloads
 spec:
+  ingressClassName: nginx
   rules:
   - host: "download-{{ .Values.deployment.ingress.deployment_name }}.{{ .Values.deployment.ingress.common_domain }}"
     http:
